# gntt

./: .gitignore  Makefile.am  README  configure.ac  go.mod  go.sum
app/tcp_client/: tcp_client.go  tcp_client_linux.go  tcp_client_windows.go
app/tcp_server/: tcp_server.go  tcp_server_linux.go  tcp_server_windows.go
cmd/: main.go
m4/: golang.m4
pkg/gntt_math/: math.go
pkg/gntt_optional/: optional.go
pkg/gntt_utils/: rate_sampler.go
pkg/gntt_worker/: client.go  server.go
